Free version spacing issues resolved.
git-svn-id: https://plugins.svn.wordpress.org/formidable/trunk@809364 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -397,7 +397,7 @@ span.howto{display:inline;}
 	padding-left:15px;
 }
 
-.frm_update_msg{border-style:solid;margin:5px 0 15px;}
+.frm_update_msg{border-style:solid;margin:0 0 15px;}
 .widefat td{width:auto;}
 .widefat .column-id{width:3.2em;}
 .widefat .column-show_count{width:5em;}
